<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_orange"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/create_player_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:layout_marginVertical="@dimen/vertical_padding"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/color_white"
        android:textSize="@dimen/large_font"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:layout_marginVertical="@dimen/vertical_padding"
        android:background="@drawable/button_background"
        android:hint="@string/user_name_hint"
        android:padding="@dimen/space_small"
        android:textColor="@color/color_orange"
        android:textColorHint="@color/color_orange"
        android:textSize="@dimen/button_font" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:layout_marginVertical="@dimen/vertical_padding"
        android:background="@drawable/button_background"
        android:text="@string/login_in"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/button_font"
        android:textStyle="bold" />

</LinearLayout>