...
        android:text="@string/player_statistics"
        android:textColor="@color/color_orange"
        android:textStyle="bold"
        android:textSize="@dimen/button_font" />

    <Button
        android:id="@+id/add_new_player_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:background="@drawable/button_background"
        android:layout_marginVertical="@dimen/vertical_padding"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:text="@string/add_a_new_player"
...
