<resources>
    <string name="app_name">Crypto6300</string>
    <string name="user_name">username</string>
    <string name="user_name_hint">Please enter your username</string>
    <string name="login_title">Cryptogram Game</string>
    <string name="login_in">Log In</string>
    <string name="login_fail">No such Admin/Player</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="player_statistics">Player Statistics</string>
    <string name="add_a_new_player">Add a New Player</string>
    <string name="add_a_new_cryptogram">Add a New Cryptogram</string>
    <string name="hello_player">Hello Player</string>
    <string name="cryptograms_to_solve">Cryptograms to Solve</string>
    <string name="cryptograms_list">Cryptogram List</string>
    <string name="save_and_quit">Save and Quit</string>
    <string name="submit">Submit</string>
    <string name="you_won">You won</string>
    <string name="you_lost">You lost</string>
    <string name="OK">OK</string>
    <string name="create_player_success">Successfully Created the Player</string>
    <string name="title_activity_player_statistics">PlayerStatistics</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
...
